--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -53,87 +53,32 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-      - uses: actions/checkout@v4
-        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'windows' || matrix.target.platform == 'android' }}
-        with:
-          path: ${{ github.workspace }}/OpenCL-SDK
-          branch: v2023.12.14
-          repository: KhronosGroup/OpenCL-SDK
-          submodules: true
-          fetch-depth: 0
-
-      - name: Check OpenCL Cache
-        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'windows' || matrix.target.platform == 'android' }}
-        id: opencl_cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            OpenCL-SDK
-          key: __${{ runner.os }}_${{ matrix.target.platform }}_${{ matrix.target.arch }}-opencl-v2021.06.30__${{ hashFiles('**/CMakeLists.txt') }}
-          restore-keys: |
-            __${{runner.os }}-opencl__
-
-      - name: Build OpenCL (Linux/Android)
-        if: ${{ (matrix.target.platform == 'linux' || matrix.target.platform == 'android') }}
+      # Setup Erlang/OTP for erl_interface (needed for godot-cnode)
+      # Note: erl_interface is built from source, but we install Erlang for system libraries
+      - name: Setup Erlang/OTP (Linux/Android)
+        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'android' }}
         run: |
-          cmake -S OpenCL-SDK -B ${{ github.workspace }}/OpenCL-SDK/build -DOPENCL_SDK_BUILD_SAMPLES=OFF -DOPENCL_ICD_LOADER_BUILD=ON -DOPENCL_SDK_BUILD_OPENGL_SAMPLES=OFF -D BUILD_TESTING=OFF -D BUILD_DOCS=OFF -D BUILD_EXAMPLES=OFF -D BUILD_TESTS=OFF -D OPENCL_SDK_TEST_SAMPLES=OFF
-          cmake --build ${{ github.workspace }}/OpenCL-SDK/build --target install
+          sudo apt-get update
+          sudo apt-get install -y erlang-dev erlang-base
 
-      - name: Build OpenCL (Windows)
+      - name: Setup Erlang/OTP (macOS)
+        if: ${{ matrix.target.platform == 'macos' }}
+        run: |
+          brew install erlang
+
+      - name: Setup Erlang/OTP (Windows)
         if: ${{ matrix.target.platform == 'windows' }}
         shell: pwsh
         run: |
-          $openclArch = if ("${{ matrix.target.arch }}" -eq "x86_64") { "x64" } else { "Win32" }
-          cmake -G "Visual Studio 17 2022" -S OpenCL-SDK -B ${{ github.workspace }}/OpenCL-SDK/build -DOPENCL_SDK_BUILD_SAMPLES=OFF -DOPENCL_ICD_LOADER_BUILD=ON -DOPENCL_SDK_BUILD_OPENGL_SAMPLES=OFF -D BUILD_TESTING=OFF -D BUILD_DOCS=OFF -D BUILD_EXAMPLES=OFF -D BUILD_TESTS=OFF -D OPENCL_SDK_TEST_SAMPLES=OFF -A $openclArch
-          cmake --build ${{ github.workspace }}/OpenCL-SDK/build --target install
+          choco install erlang -y
 
-      # Set OpenCL library path for Windows (output for use in next step)
-      - name: Find OpenCL library path (Windows)
-        if: ${{ matrix.target.platform == 'windows' }}
-        id: opencl_path
-        shell: pwsh
-        run: |
-          $openclArch = if ("${{ matrix.target.arch }}" -eq "x86_64") { "x64" } else { "Win32" }
-          # Try architecture-specific path first, then fallback to generic
-          $openclLib = "${{ github.workspace }}/OpenCL-SDK/install/lib/$openclArch/OpenCL.lib"
-          if (-not (Test-Path $openclLib)) {
-            $openclLib = "${{ github.workspace }}/OpenCL-SDK/install/lib/OpenCL.lib"
-          }
-          if (Test-Path $openclLib) {
-            Write-Host "opencl_lib=$openclLib" >> $env:GITHUB_OUTPUT
-            Write-Host "Found OpenCL.lib at $openclLib"
-          } else {
-            Write-Host "Warning: OpenCL.lib not found, checking install directory..."
-            $found = Get-ChildItem -Path "${{ github.workspace }}/OpenCL-SDK/install" -Recurse -Filter "OpenCL.lib" | Select-Object -First 1
-            if ($found) {
-              Write-Host "opencl_lib=$($found.FullName)" >> $env:GITHUB_OUTPUT
-              Write-Host "Found OpenCL.lib at $($found.FullName)"
-            } else {
-              Write-Host "opencl_lib=" >> $env:GITHUB_OUTPUT
-              Write-Host "Error: OpenCL.lib not found anywhere"
-            }
-          }
-
-      # Build GDExtension (with OpenCL env vars for Windows)
+      # Build GDExtension
       - name: 🔗 GDExtension Build
-        if: ${{ matrix.target.platform != 'windows' }}
         uses: godotengine/godot-cpp-template/.github/actions/build@f9564a9c8115139b9624692d39e358291f6d76ce
         with:
           platform: ${{ matrix.target.platform }}
           arch: ${{ matrix.target.arch }}
-          float-precision: ${{ matrix.float-precision }}
-          build-target-type: ${{ matrix.target-type }}
-
-      - name: 🔗 GDExtension Build (Windows)
-        if: ${{ matrix.target.platform == 'windows' }}
-        uses: godotengine/godot-cpp-template/.github/actions/build@f9564a9c8115139b9624692d39e358291f6d76ce
-        env:
-          OpenCL_ROOT: ${{ github.workspace }}/OpenCL-SDK
-          OpenCL_INCLUDE_DIR: ${{ github.workspace }}/OpenCL-SDK/build/install/include
-          OpenCL_LIBRARY: ${{ steps.opencl_path.outputs.opencl_lib != '' && steps.opencl_path.outputs.opencl_lib || format('{0}/OpenCL-SDK/install/lib/OpenCL.lib', github.workspace) }}
-        with:
-          platform: ${{ matrix.target.platform }}
-          arch: ${{ matrix.target.arch }}
+          godot-cpp-location: thirdparty/godot-cpp
           float-precision: ${{ matrix.float-precision }}
           build-target-type: ${{ matrix.target-type }}
 
@@ -152,7 +97,7 @@ jobs:
         if: ${{ matrix.target.platform == 'macos' && github.ref == 'refs/heads/main' }}
         uses: godotengine/godot-cpp-template/.github/actions/sign@f9564a9c8115139b9624692d39e358291f6d76ce
         with:
-          FRAMEWORK_PATH: bin/addons/godot_whisper/bin/libgodot_whisper.macos.${{ matrix.target-type }}${{ steps.macos_ext.outputs.extension }}.universal.framework
+          FRAMEWORK_PATH: bin/addons/godot_cnode/bin/libgodot_cnode.macos.${{ matrix.target-type }}${{ steps.macos_ext.outputs.extension }}.universal.framework
           SIGN_FLAGS: "--deep"
           APPLE_CERT_BASE64: ${{ secrets.APPLE_CERT_BASE64 }}
           APPLE_CERT_PASSWORD: ${{ secrets.APPLE_CERT_PASSWORD }}
@@ -165,24 +110,13 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Godot_Whisper-${{ matrix.target.platform }}-${{ matrix.target.arch }}-${{ matrix.float-precision }}-${{ matrix.target-type }}
+          name: Godot_CNode-${{ matrix.target.platform }}-${{ matrix.target.arch }}-${{ matrix.float-precision }}-${{ matrix.target-type }}
           path: |
             ${{ github.workspace }}/bin/**/*.so
             ${{ github.workspace }}/bin/**/*.dll
             ${{ github.workspace }}/bin/**/*.wasm
             ${{ github.workspace }}/bin/**/*.framework/**
-            ${{ github.workspace }}/bin/addons/godot_whisper/ggml-metal.metal
-            ${{ github.workspace }}/bin/addons/godot_whisper/bin/ggml-metal.metal
-            ${{ github.workspace }}/bin/addons/godot_whisper/audio_stream_to_text.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/capture_stream_to_text.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/godot_whisper.gdextension
-            ${{ github.workspace }}/bin/addons/godot_whisper/label_transcribe.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/model_downloader.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/plugin.cfg
-            ${{ github.workspace }}/bin/addons/godot_whisper/whisper_dock.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/whisper_dock.tscn
-            ${{ github.workspace }}/bin/addons/godot_whisper/models/gglm-tiny.en.bin
-            ${{ github.workspace }}/bin/samples/**
+            ${{ github.workspace }}/bin/addons/godot_cnode/**
           if-no-files-found: error
 
   build_full:
@@ -215,87 +149,32 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-      - uses: actions/checkout@v4
-        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'windows' || matrix.target.platform == 'android' }}
-        with:
-          path: ${{ github.workspace }}/OpenCL-SDK
-          branch: v2023.12.14
-          repository: KhronosGroup/OpenCL-SDK
-          submodules: true
-          fetch-depth: 0
-
-      - name: Check OpenCL Cache
-        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'windows' || matrix.target.platform == 'android' }}
-        id: opencl_cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            OpenCL-SDK
-          key: __${{ runner.os }}_${{ matrix.target.platform }}_${{ matrix.target.arch }}-opencl-v2021.06.30__${{ hashFiles('**/CMakeLists.txt') }}
-          restore-keys: |
-            __${{runner.os }}-opencl__
-
-      - name: Build OpenCL (Linux/Android)
-        if: ${{ (matrix.target.platform == 'linux' || matrix.target.platform == 'android') }}
+      # Setup Erlang/OTP for erl_interface (needed for godot-cnode)
+      # Note: erl_interface is built from source, but we install Erlang for system libraries
+      - name: Setup Erlang/OTP (Linux/Android)
+        if: ${{ matrix.target.platform == 'linux' || matrix.target.platform == 'android' }}
         run: |
-          cmake -S OpenCL-SDK -B ${{ github.workspace }}/OpenCL-SDK/build -DOPENCL_SDK_BUILD_SAMPLES=OFF -DOPENCL_ICD_LOADER_BUILD=ON -DOPENCL_SDK_BUILD_OPENGL_SAMPLES=OFF -D BUILD_TESTING=OFF -D BUILD_DOCS=OFF -D BUILD_EXAMPLES=OFF -D BUILD_TESTS=OFF -D OPENCL_SDK_TEST_SAMPLES=OFF
-          cmake --build ${{ github.workspace }}/OpenCL-SDK/build --target install
+          sudo apt-get update
+          sudo apt-get install -y erlang-dev erlang-base
 
-      - name: Build OpenCL (Windows)
+      - name: Setup Erlang/OTP (macOS/iOS)
+        if: ${{ matrix.target.platform == 'macos' || matrix.target.platform == 'ios' }}
+        run: |
+          brew install erlang
+
+      - name: Setup Erlang/OTP (Windows)
         if: ${{ matrix.target.platform == 'windows' }}
         shell: pwsh
         run: |
-          $openclArch = if ("${{ matrix.target.arch }}" -eq "x86_64") { "x64" } else { "Win32" }
-          cmake -G "Visual Studio 17 2022" -S OpenCL-SDK -B ${{ github.workspace }}/OpenCL-SDK/build -DOPENCL_SDK_BUILD_SAMPLES=OFF -DOPENCL_ICD_LOADER_BUILD=ON -DOPENCL_SDK_BUILD_OPENGL_SAMPLES=OFF -D BUILD_TESTING=OFF -D BUILD_DOCS=OFF -D BUILD_EXAMPLES=OFF -D BUILD_TESTS=OFF -D OPENCL_SDK_TEST_SAMPLES=OFF -A $openclArch
-          cmake --build ${{ github.workspace }}/OpenCL-SDK/build --target install
+          choco install erlang -y
 
-      # Set OpenCL library path for Windows (output for use in next step)
-      - name: Find OpenCL library path (Windows)
-        if: ${{ matrix.target.platform == 'windows' }}
-        id: opencl_path
-        shell: pwsh
-        run: |
-          $openclArch = if ("${{ matrix.target.arch }}" -eq "x86_64") { "x64" } else { "Win32" }
-          # Try architecture-specific path first, then fallback to generic
-          $openclLib = "${{ github.workspace }}/OpenCL-SDK/install/lib/$openclArch/OpenCL.lib"
-          if (-not (Test-Path $openclLib)) {
-            $openclLib = "${{ github.workspace }}/OpenCL-SDK/install/lib/OpenCL.lib"
-          }
-          if (Test-Path $openclLib) {
-            Write-Host "opencl_lib=$openclLib" >> $env:GITHUB_OUTPUT
-            Write-Host "Found OpenCL.lib at $openclLib"
-          } else {
-            Write-Host "Warning: OpenCL.lib not found, checking install directory..."
-            $found = Get-ChildItem -Path "${{ github.workspace }}/OpenCL-SDK/install" -Recurse -Filter "OpenCL.lib" | Select-Object -First 1
-            if ($found) {
-              Write-Host "opencl_lib=$($found.FullName)" >> $env:GITHUB_OUTPUT
-              Write-Host "Found OpenCL.lib at $($found.FullName)"
-            } else {
-              Write-Host "opencl_lib=" >> $env:GITHUB_OUTPUT
-              Write-Host "Error: OpenCL.lib not found anywhere"
-            }
-          }
-
-      # Build GDExtension (with OpenCL env vars for Windows)
+      # Build GDExtension
       - name: 🔗 GDExtension Build
-        if: ${{ matrix.target.platform != 'windows' }}
         uses: godotengine/godot-cpp-template/.github/actions/build@f9564a9c8115139b9624692d39e358291f6d76ce
         with:
           platform: ${{ matrix.target.platform }}
           arch: ${{ matrix.target.arch }}
-          float-precision: ${{ matrix.float-precision }}
-          build-target-type: ${{ matrix.target-type }}
-
-      - name: 🔗 GDExtension Build (Windows)
-        if: ${{ matrix.target.platform == 'windows' }}
-        uses: godotengine/godot-cpp-template/.github/actions/build@f9564a9c8115139b9624692d39e358291f6d76ce
-        env:
-          OpenCL_ROOT: ${{ github.workspace }}/OpenCL-SDK
-          OpenCL_INCLUDE_DIR: ${{ github.workspace }}/OpenCL-SDK/build/install/include
-          OpenCL_LIBRARY: ${{ steps.opencl_path.outputs.opencl_lib != '' && steps.opencl_path.outputs.opencl_lib || format('{0}/OpenCL-SDK/install/lib/OpenCL.lib', github.workspace) }}
-        with:
-          platform: ${{ matrix.target.platform }}
-          arch: ${{ matrix.target.arch }}
+          godot-cpp-location: thirdparty/godot-cpp
           float-precision: ${{ matrix.float-precision }}
           build-target-type: ${{ matrix.target-type }}
 
@@ -314,7 +193,7 @@ jobs:
         if: ${{ matrix.target.platform == 'macos' && github.ref == 'refs/heads/main' }}
         uses: godotengine/godot-cpp-template/.github/actions/sign@f9564a9c8115139b9624692d39e358291f6d76ce
         with:
-          FRAMEWORK_PATH: bin/addons/godot_whisper/bin/libgodot_whisper.macos.${{ matrix.target-type }}${{ steps.macos_ext.outputs.extension }}.universal.framework
+          FRAMEWORK_PATH: bin/addons/godot_cnode/bin/libgodot_cnode.macos.${{ matrix.target-type }}${{ steps.macos_ext.outputs.extension }}.universal.framework
           SIGN_FLAGS: "--deep"
           APPLE_CERT_BASE64: ${{ secrets.APPLE_CERT_BASE64 }}
           APPLE_CERT_PASSWORD: ${{ secrets.APPLE_CERT_PASSWORD }}
@@ -327,27 +206,16 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Godot_Whisper-${{ matrix.target.platform }}-${{ matrix.target.arch }}-${{ matrix.float-precision }}-${{ matrix.target-type }}
+          name: Godot_CNode-${{ matrix.target.platform }}-${{ matrix.target.arch }}-${{ matrix.float-precision }}-${{ matrix.target-type }}
           path: |
             ${{ github.workspace }}/bin/**/*.so
             ${{ github.workspace }}/bin/**/*.dll
             ${{ github.workspace }}/bin/**/*.wasm
             ${{ github.workspace }}/bin/**/*.framework/**
-            ${{ github.workspace }}/bin/addons/godot_whisper/ggml-metal.metal
-            ${{ github.workspace }}/bin/addons/godot_whisper/bin/ggml-metal.metal
-            ${{ github.workspace }}/bin/addons/godot_whisper/audio_stream_to_text.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/capture_stream_to_text.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/godot_whisper.gdextension
-            ${{ github.workspace }}/bin/addons/godot_whisper/label_transcribe.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/model_downloader.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/plugin.cfg
-            ${{ github.workspace }}/bin/addons/godot_whisper/whisper_dock.gd
-            ${{ github.workspace }}/bin/addons/godot_whisper/whisper_dock.tscn
-            ${{ github.workspace }}/bin/addons/godot_whisper/models/gglm-tiny.en.bin
-            ${{ github.workspace }}/bin/samples/**
+            ${{ github.workspace }}/bin/addons/godot_cnode/**
           if-no-files-found: error
 
-  # Merges all the build artifacts together into a single Godot_Whisper artifact.
+  # Merges all the build artifacts together into a single Godot_CNode artifact.
   merge:
     runs-on: ubuntu-latest
     needs: [build_ci, build_full]
@@ -356,8 +224,8 @@ jobs:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
         with:
-          name: Godot_Whisper
-          pattern: Godot_Whisper-*
+          name: Godot_CNode
+          pattern: Godot_CNode-*
           delete-merged: true
 
   release:
@@ -366,3 +234,5 @@ jobs:
       contents: write
     needs: [merge]
     uses: ./.github/workflows/release.yml
+
+
