--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -31,6 +31,9 @@ jobs:
         include:
           - target: { platform: linux, arch: x86_64, os: ubuntu-latest }
             target-type: template_release
+            float-precision: single
+          - target: { platform: linux, arch: x86_64, os: ubuntu-latest }
+            target-type: template_release
             float-precision: double
           - target: { platform: windows, arch: x86_64, os: windows-latest }
             target-type: template_release
@@ -227,6 +230,57 @@ jobs:
           name: Godot_CNode
           pattern: Godot_CNode-*
           delete-merged: true
+
+  test_integration:
+    name: Test CNode Integration
+    needs: [build_ci]
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+
+      - name: Setup Erlang/OTP
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y erlang-dev erlang-base
+
+      - name: Setup Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: "1.16.0"
+          otp-version: "26.2.2"
+
+      - name: Download Godot
+        run: |
+          GODOT_VERSION="4.1.3"
+          wget -q https://github.com/godotengine/godot/releases/download/${GODOT_VERSION}-stable/Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
+          unzip -q Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
+          chmod +x Godot_v${GODOT_VERSION}-stable_linux.x86_64
+          sudo mv Godot_v${GODOT_VERSION}-stable_linux.x86_64 /usr/local/bin/godot
+          godot --version
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: Godot_CNode-linux-x86_64-single-template_release
+          path: bin/addons/godot_cnode
+
+      - name: Verify GDExtension exists
+        run: |
+          ls -la bin/addons/godot_cnode/bin/ || echo "GDExtension not found"
+          test -f bin/addons/godot_cnode/bin/libgodot_cnode.linux.template_release.x86_64.so || exit 1
+          echo "✓ GDExtension found"
+
+      - name: Run CNode integration tests
+        run: |
+          cd ${{ github.workspace }}
+          export GODOT_BIN=godot
+          chmod +x test/run_cnode_test.sh
+          timeout 60 test/run_cnode_test.sh || exit 1
 
   release:
     name: Create Release
