Fix CI/CD: Replace invalid godot-cpp-location with gdextension-directory
The build action doesn't accept 'godot-cpp-location' parameter.
Use 'gdextension-directory' instead, which is the correct parameter name
according to the action's valid inputs.

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           platform: ${{ matrix.target.platform }}
           arch: ${{ matrix.target.arch }}
-          godot-cpp-location: thirdparty/godot-cpp
+          gdextension-directory: .
           float-precision: ${{ matrix.float-precision }}
           build-target-type: ${{ matrix.target-type }}
 
@@ -177,7 +177,7 @@ jobs:
         with:
           platform: ${{ matrix.target.platform }}
           arch: ${{ matrix.target.arch }}
-          godot-cpp-location: thirdparty/godot-cpp
+          gdextension-directory: .
           float-precision: ${{ matrix.float-precision }}
           build-target-type: ${{ matrix.target-type }}
 
