Update .gitignore to exclude Python cache and build artifacts
- Add __pycache__/ directories
- Add Python bytecode files (*.py[cod], *.class)
- Add build artifacts (*.framework/, *.dylib, *.dll, *.so, *.a, *.lib)
- Add IDE files (.idea/, *.swp, *.swo, *~)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,24 @@
 bin/.godot
 bin/addons/godot_cnode/bin/
 *.code-workspace
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Build artifacts
+*.framework/
+*.dylib
+*.dll
+*.so
+*.a
+*.lib
+
+# IDE
+.idea/
+*.swp
+*.swo
+*~
