--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,13 @@ __pycache__/
 *.a
 *.lib
 
+# Windows build artifacts
+*.exe
+*.obj
+*.pdb
+*.ilk
+*.exp
+
 # IDE
 .idea/
 *.swp
@@ -44,3 +51,9 @@ erl_crash.dump
 scenetree_properties_*.txt
 bin/test_cnode_unit
 test/*.log
+
+# Test executables
+test/test_cnode
+test/test_cnode.exe
+test/*.obj
+test/*.pdb
